Mobile UI launch. Proof 1.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -53,40 +53,30 @@
             </p>
         </button>
 
-        <div class="announcementBanner noImage launchingQuiz">
+        <div class="announcementBanner leftRight">
             <div class="bannerLeft">
                 <div class="bannerImage">
                 </div>
             </div>
             <div class="bannerRight">
-                <div class="titlesAndButtons noImage">
+                <div class="titlesAndButtons">
                     <div class="titles">
 
                         <div class="mainTitle">
-                            <span class="avoidwrap">Our new Quiz module</span>
-                            <span class="avoidwrap">&ndash;<span class="standOut"> Primal’s 3D Anatomy Quiz</span>&nbsp;&ndash;</span>
-                            <span class="avoidwrap">has <span class="semibold">launched</span><span class="smallSpace">&nbsp;</span>!</span>
-                            <span class="avoidwrap">If you have access you’ll</span>
-                            <span class="avoidwrap">find it in the
-                                <span class="button-text for-TitlesPage" 
-                                    data-id="Quizzing"
-                                    data-bannerproductlink="true"
-                                    onclick="parent.welcomerLinkClicked(this)">Quizzing</span>
-                                    <span class="button-text for-LoginPage">Quizzing </span>tab.
-                            </span>
-
+                            <div>
+                                <span class="avoidwrap">Anatomy.tv has been </span>
+                                <span class="avoidwrap"><span class="standOut">optimised</span></span>
+                                <span class="avoidwrap">for <span class="standOut">mobile phones</span><span class="smallSpace">&nbsp;</span>!</span>
+                            </div>
                         </div>
 
-                        <div class="surOrSubTitle small spaced">
-                            <span class="avoidwrap">
-                                We have also made some changes to&nbsp;Anatomy.tv. 
-                            </span>
-                            <span class="avoidwrap">
-                            More details can be found in this
-                            <!-- You can find out more in this -->
-                            <a href="/faq" title="Link to FAQ page" target="_blank">
-                                <span>FAQ</span></a>.
-                            </span>
+                        <div class="mobile-banner-spacer"></div>
+
+                        <div class="surOrSubTitle small">
+                            <div>
+                                <span class="avoidwrap">Access on your device's</span>
+                                <span class="avoidwrap">browser today.</span>
+                            </div>
                         </div>
                     </div>
                 </div>
