Mobile UI launch banner. Proof 1.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -65,7 +65,7 @@
                         <div class="mainTitle">
                             <div>
                                 <span class="avoidwrap">Anatomy.tv has been </span>
-                                <span class="avoidwrap"><span class="standOut">optimised</span></span>
+                                <span class="avoidwrap"><span class="standOut">optimized</span></span>
                                 <span class="avoidwrap">for <span class="standOut">mobile phones</span><span class="smallSpace">&nbsp;</span>!</span>
                             </div>
                         </div>
