--- a/popup-for-iframe.html
+++ b/popup-for-iframe.html
@@ -12,7 +12,10 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/popup.css?20201030">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;800&display=swap" rel="stylesheet"> 
+
+    <link rel="stylesheet" href="styles/css/popup.css?2021-02-19-1703">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
@@ -23,21 +26,21 @@
 
     <div class="messageBox">
         <div class="mainTitle">
-            From January 2021 browsers will<br><span>end support of Flash</span>
+            From the <span>10th March 2021</span>, we will <span>only</span> be supporting access to Anatomy.tv via <span>HTTPS</span> (rather than HTTP).
         </div>
 
         <div class="bannerText">
             <p>
-                This change will impact our current Quizzes and Activities tab. On the 17th November, to ensure continuity of access, we are launching a new and exciting module to replace our existing Flash-based regional and functional quiz modules. We are also adjusting the layout for some of our older products in the Titles tab of Anatomy.tv. 
+                You have accessed today using HTTP. In most cases this will be fine even after the 10th March as we will be redirecting all traffic to <a href="https://www.anatomy.tv" class="specialLink" target="_blank"><span>https</span>://www.anatomy.tv</a>. 
             </p>
 
             <p>
-                More information about both these changes can be found in this <a href="https://www.primalpictures.com/support/faqs/" target="_blank">FAQ</a>.
+                We recommend adjusting any browser bookmarks you may have saved before 10th March. 
             </p>
 
             <p>
-                If you’d like to get in touch with us please contact us at 
-                <a href="mailto:clientservices@primalpictures.com" target="_blank">clientservices@primalpictures.com</a>.
+                If you have accessed via a <span>Proxy</span> and are seeing this message, your IT department or account administrator needs to take action and contact us 
+                <a href="mailto:clientservices@primalpictures.com" subject="Http proxy access enquiry">clientservices@primalpictures.com</a>.
             </p>
         </div>
 
