Maintenance message for Paywall, etc.

--- a/popup-for-iframe.html
+++ b/popup-for-iframe.html
@@ -12,35 +12,45 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
+    <script>
+        // increment this to force-show pop-up after user has clicked 'Hide this next time': 
+        var popupEdition = 1;
+    </script>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/css/popup.css?2021-02-19-1703">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup.js?20201030"></script>
+    <script src="js/banner-and-popup.js?2021-06-07"></script>
 </head>
 
 <body class="popup">
 
     <div class="messageBox">
         <div class="mainTitle">
-            From the <span>10th March 2021</span>, we will <span>only</span> be supporting access to Anatomy.tv via <span>HTTPS</span> (rather than HTTP).
+            From the <span>10th March 2021</span>, we will <span>only</span> be supporting access to Anatomy.tv via
+            <span>HTTPS</span> (rather than HTTP).
         </div>
 
         <div class="bannerText">
             <p>
-                You have accessed today using HTTP. In most cases this will be fine even after the 10th March as we will be redirecting all traffic to <a href="https://www.anatomy.tv" class="specialLink" target="_blank"><span>https</span>://www.anatomy.tv</a>. 
+                You have accessed today using HTTP. In most cases this will be fine even after the 10th March as we will
+                be redirecting all traffic to <a href="https://www.anatomy.tv" class="specialLink"
+                    target="_blank"><span>https</span>://www.anatomy.tv</a>.
             </p>
 
             <p>
-                We recommend adjusting any browser bookmarks you may have saved before 10th March. 
+                We recommend adjusting any browser bookmarks you may have saved before 10th March.
             </p>
 
             <p>
-                If you have accessed via a <span>Proxy</span> and are seeing this message, your IT department or account administrator needs to take action and contact us 
-                <a href="mailto:clientservices@primalpictures.com" subject="Http proxy access enquiry">clientservices@primalpictures.com</a>.
+                If you have accessed via a <span>Proxy</span> and are seeing this message, your IT department or account
+                administrator needs to take action and contact us
+                <a href="mailto:clientservices@primalpictures.com"
+                    subject="Http proxy access enquiry">clientservices@primalpictures.com</a>.
             </p>
         </div>
 
