--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -15,11 +15,16 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner.css?2020-11-17-0931">
+    <script>
+        // increment this to force-open header after user has collapsed it (ie when there's a new announcement banner)):
+        var bannerEditionNumber = 4;
+    </script>
+
+    <link rel="stylesheet" href="styles/css/banner.css?2021-05-04">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup.js?2020-11-16"></script>
+    <script src="js/banner-and-popup.js?2021-06-07"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
@@ -45,9 +50,6 @@
         <div class="dotContainer displayIsNone"></div>
         <div class="playPause displayIsNone" title="Play / Pause banner"></div>
         <button class="continueBtn" onclick="parent.toggleHeader()">
-            <p class="for-LoginPage">
-                Continue to login
-            </p>
             <p class="for-TitlesPage">
                 Continue to site
             </p>
@@ -64,18 +66,21 @@
 
                         <div class="mainTitle">
                             <div>
-                                <span class="avoidwrap">Anatomy.tv has been </span>
-                                <span class="avoidwrap"><span class="standOut">optimized</span></span>
-                                <span class="avoidwrap">for <span class="standOut">mobile phones</span><span class="smallSpace">&nbsp;</span>!</span>
+                                On <strong>Wednesday 9th June</strong> Anatomy.tv will be <strong>down from 7am UK
+                                    time</strong> for approximately&nbsp;1&nbsp;hour as we work on bringing you some
+                                important
+                                and exciting&nbsp;updates.
                             </div>
                         </div>
 
                         <div class="mobile-banner-spacer"></div>
 
-                        <div class="surOrSubTitle small">
+                        <div class="surOrSubTitle">
                             <div>
-                                <span class="avoidwrap">Access on your device's</span>
-                                <span class="avoidwrap">browser today.</span>
+                                We apologise in advance for any inconvenience caused. If you still can’t access
+                                Anatomy.tv
+                                after this time or have any questions please get in touch with us&nbsp;<a
+                                    href="https://www.primalpictures.com/contact/" target="_blank">here</a>.
                             </div>
                         </div>
                     </div>
