Maintenance complete. For approval.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -66,10 +66,7 @@
 
                         <div class="mainTitle">
                             <div>
-                                On <strong>Wednesday 9th June</strong> Anatomy.tv will be <strong>down from 7am UK
-                                    time</strong> for approximately&nbsp;1&nbsp;hour as we work on bringing you some
-                                important
-                                and exciting&nbsp;updates.
+                                We have made some important <strong>updates&nbsp;to&nbsp;Anatomy.tv</strong>.
                             </div>
                         </div>
 
@@ -77,10 +74,8 @@
 
                         <div class="surOrSubTitle">
                             <div>
-                                We apologise in advance for any inconvenience caused. If you still can’t access
-                                Anatomy.tv
-                                after this time or have any questions please get in touch with us&nbsp;<a
-                                    href="https://www.primalpictures.com/contact/" target="_blank">here</a>.
+                                If you are experiencing any problems please get in touch with&nbsp;us&nbsp;<a
+                                    href="mailto:clientservices@primalpictures.com" target="_blank">here</a>.
                             </div>
                         </div>
                     </div>
