--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -17,31 +17,16 @@
 
     <script>
         // increment this to force-open header after user has collapsed it (ie when there's a new announcement banner)):
-        var bannerEditionNumber = 4;
+        var bannerEditionNumber = 5;
     </script>
 
-    <link rel="stylesheet" href="styles/css/banner.css?2021-05-04">
+    <!-- TO DO: automatic versioning for css -->
+    <link rel="stylesheet" href="styles/css/banner.css?2021-06-08">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
     <script src="js/banner-and-popup.js?2021-06-07"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
-    <!-- <script>
-        WebFont.load({
-            custom: {
-                families: ['Muli']
-            }
-        });
-        WebFontConfig = {
-            loading: function () {},
-            active: function () {alert('FONTS LOADED')},
-            inactive: function () {},
-            fontloading: function (familyName, fvd) {},
-            fontactive: function (familyName, fvd) {},
-            fontinactive: function (familyName, fvd) {}
-        };
-    </script> -->
 </head>
 
 <body class="banner">
