Generic message for mobile banner.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -40,10 +40,8 @@
             </p>
         </button>
 
-        <div class="announcementBanner leftRight">
+        <div class="announcementBanner">
             <div class="bannerLeft">
-                <div class="bannerImage">
-                </div>
             </div>
             <div class="bannerRight">
                 <div class="titlesAndButtons">
@@ -51,16 +49,7 @@
 
                         <div class="mainTitle">
                             <div>
-                                We have made some important <strong>updates&nbsp;to&nbsp;Anatomy.tv</strong>.
-                            </div>
-                        </div>
-
-                        <div class="mobile-banner-spacer"></div>
-
-                        <div class="surOrSubTitle">
-                            <div>
-                                If you are experiencing any problems please get in touch with&nbsp;us&nbsp;<a
-                                    href="mailto:clientservices@primalpictures.com" target="_blank">here</a>.
+                                Welcome to <strong>Anatomy.tv</strong>!
                             </div>
                         </div>
                     </div>
