RT Quiz Mobile launch.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -17,15 +17,15 @@
 
     <script>
         // increment this to force-open header after user has collapsed it (ie when there's a new announcement banner)):
-        var bannerEditionNumber = 7;
+        var bannerEditionNumber = 8;
     </script>
 
     <!-- TO DO: automatic versioning for css -->
-    <link rel="stylesheet" href="styles/css/banner.css?2021-06-09">
+    <link rel="stylesheet" href="styles/css/banner.css?2021-07-05-C">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup.js?2021-06-07"></script>
+    <script src="js/banner-and-popup.js?2021-07-05"></script>
 
 </head>
 
@@ -51,7 +51,8 @@
 
                         <div class="mainTitle">
                             <div>
-                                We have made some important <strong>updates&nbsp;to&nbsp;Anatomy.tv</strong>.
+                                Primal’s <strong>3D Anatomy Quiz</strong> is now <strong>available
+                                    as&nbsp;an&nbsp;app</strong>!
                             </div>
                         </div>
 
@@ -59,8 +60,9 @@
 
                         <div class="surOrSubTitle">
                             <div>
-                                If you are experiencing any problems please get in touch with&nbsp;us&nbsp;<a
-                                    href="mailto:clientservices@primalpictures.com" target="_blank">here</a>.
+                                Check it out&nbsp;<a
+                                    href="https://www.primalpictures.com/news/primal-launches-3d-anatomy-quiz-app/"
+                                    target="_blank">here</a>!
                             </div>
                         </div>
                     </div>
