--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -21,7 +21,7 @@
     </script>
 
     <!-- TO DO: automatic versioning for css -->
-    <link rel="stylesheet" href="styles/css/banner.css?2021-07-05-C">
+    <link rel="stylesheet" href="styles/css/banner.css?2021-07-06">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
