Search_updates_pre-launch.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -15,16 +15,16 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <script>
-        // increment this to force-open header after user has collapsed it (ie when there's a new announcement banner)):
-        var bannerEditionNumber = 6;
-    </script>
-
-    <link rel="stylesheet" href="styles/css/banner.css?2021-05-04">
-
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup.js?2021-06-07"></script>
+
+    <script>
+        // increment this to force-open header after user has collapsed it (ie when there's a new announcement banner)):
+        var bannerEditionNumber = 9;
+    </script>
+
+    <link rel="stylesheet" href="styles/css/banner.css?2021-07-15-4">
+    <script src="js/banner-and-popup.js?2021-07-15"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
@@ -66,8 +66,8 @@
 
                         <div class="mainTitle">
                             <div>
-                                On <strong>Wednesday 16th June</strong> Anatomy.tv will be <strong>down from 7am UK
-                                    time</strong> for approximately&nbsp;1&nbsp;hour as we work on bringing you some
+                                On <strong>Tuesday 20th July</strong> Anatomy.tv will be <strong>down from 8am UK
+                                    time</strong> for approximately 30&nbsp;minutes as we work on bringing you some
                                 important
                                 and exciting&nbsp;updates.
                             </div>
@@ -83,6 +83,7 @@
                                     href="https://www.primalpictures.com/contact/" target="_blank">here</a>.
                             </div>
                         </div>
+                        <div class="mobile-banner-bottom-spacer"></div>
                     </div>
                 </div>
             </div>
