--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -42,6 +42,8 @@
 
         <div class="announcementBanner leftRight">
             <div class="bannerLeft">
+                <div class="bannerGradient">
+                </div>
                 <div class="bannerImage">
                 </div>
             </div>
@@ -51,8 +53,7 @@
 
                         <div class="mainTitle">
                             <div>
-                                Primal’s <strong>3D Anatomy Quiz</strong> is now <strong>available
-                                    as&nbsp;an&nbsp;app</strong>!
+                                Primal Pictures is on&nbsp;Instagram!
                             </div>
                         </div>
 
@@ -60,9 +61,12 @@
 
                         <div class="surOrSubTitle">
                             <div>
-                                Check it out&nbsp;<a
+                                Click on <a
                                     href="https://www.primalpictures.com/news/primal-launches-3d-anatomy-quiz-app/"
-                                    target="_blank">here</a>!
+                                    target="_blank">this link</a>
+                                to see our anatomists compete in our anatomy&nbsp;quiz!... and follow for more great
+                                videos,
+                                quizzes and&nbsp;competitions!
                             </div>
                         </div>
                     </div>
