--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -21,11 +21,11 @@
     </script>
 
     <!-- TO DO: automatic versioning for css -->
-    <link rel="stylesheet" href="styles/css/banner.css?2021-07-06-B">
+    <link rel="stylesheet" href="styles/css/banner.css?2021-07-21-B">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup.js?2021-07-05"></script>
+    <script src="js/banner-and-popup.js?2021-07-21"></script>
 
 </head>
 
@@ -34,11 +34,13 @@
     <div class="bannerInnerBox">
         <div class="dotContainer displayIsNone"></div>
         <div class="playPause displayIsNone" title="Play / Pause banner"></div>
-        <button class="continueBtn" onclick="parent.toggleHeader()">
-            <p class="for-TitlesPage">
-                Continue to site
-            </p>
-        </button>
+        <div class="continueBtn-spacer">
+            <button class="continueBtn" onclick="parent.toggleHeader()">
+                <p class="for-TitlesPage">
+                    Continue to site
+                </p>
+            </button>
+        </div>
 
         <div class="announcementBanner leftRight">
             <div class="bannerLeft">
@@ -61,14 +63,14 @@
 
                         <div class="surOrSubTitle">
                             <div>
-                                Click on <a
-                                    href="https://www.primalpictures.com/news/primal-launches-3d-anatomy-quiz-app/"
-                                    target="_blank">this link</a>
-                                to see our anatomists compete in our anatomy&nbsp;quiz!... and follow for more great
-                                videos,
-                                quizzes and&nbsp;competitions!
+                                Click <a href="https://www.instagram.com/tv/CRgqipgjVxU/?utm_source=ig_web_copy_link"
+                                    target="_blank">here</a>
+                                to watch our anatomists compete in our new 3D Anatomy Quiz and follow us for more great
+                                videos, quizzes, competitions and&nbsp;more!
                             </div>
                         </div>
+
+                        <div class="mobile-banner-spacer-bottom"></div>
                     </div>
                 </div>
             </div>
