--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -17,11 +17,11 @@
 
     <script>
         // increment this to force-open header after user has collapsed it (ie when there's a new announcement banner)):
-        var bannerEditionNumber = 8;
+        var bannerEditionNumber = 11;
     </script>
 
     <!-- TO DO: automatic versioning for css -->
-    <link rel="stylesheet" href="styles/css/banner.css?2021-07-21-B">
+    <link rel="stylesheet" href="styles/css/banner.css?2021-07-21-C">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
@@ -65,7 +65,8 @@
                             <div>
                                 Click <a href="https://www.instagram.com/tv/CRgqipgjVxU/?utm_source=ig_web_copy_link"
                                     target="_blank">here</a>
-                                to watch our anatomists compete in our new 3D Anatomy Quiz and follow us for more great
+                                to watch our anatomists compete in our new 3D Anatomy Quiz app and follow us for more
+                                great
                                 videos, quizzes, competitions and&nbsp;more!
                             </div>
                         </div>
