--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -17,11 +17,11 @@
 
     <script>
         // increment this to force-open header after user has collapsed it (ie when there's a new announcement banner)):
-        var bannerEditionNumber = 8;
+        var bannerEditionNumber = 12;
     </script>
 
     <!-- TO DO: automatic versioning for css -->
-    <link rel="stylesheet" href="styles/css/banner.css?2021-07-06-B">
+    <link rel="stylesheet" href="styles/css/banner.css?2021-09-02">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
@@ -51,8 +51,8 @@
 
                         <div class="mainTitle">
                             <div>
-                                Primal’s <strong>3D Anatomy Quiz</strong> is now <strong>available
-                                    as&nbsp;an&nbsp;app</strong>!
+                                Happy <strong>30th birthday</strong> to&nbsp;Primal<span
+                                    class="smallSpace">&nbsp</span>!
                             </div>
                         </div>
 
@@ -60,9 +60,9 @@
 
                         <div class="surOrSubTitle">
                             <div>
-                                Check it out&nbsp;<a
+                                Watch and share our&nbsp;<a
                                     href="https://www.primalpictures.com/news/primal-launches-3d-anatomy-quiz-app/"
-                                    target="_blank">here</a>!
+                                    target="_blank">new video</a> to&nbsp;celebrate...
                             </div>
                         </div>
                     </div>
