30th Birthday final.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -61,8 +61,8 @@
                         <div class="surOrSubTitle">
                             <div>
                                 Watch and share our&nbsp;<a
-                                    href="https://www.primalpictures.com/news/primal-launches-3d-anatomy-quiz-app/"
-                                    target="_blank">new video</a> to&nbsp;celebrate...
+                                    href="https://www.primalpictures.com/news/30th-birthday-video" target="_blank">new
+                                    video</a> to&nbsp;celebrate...
                             </div>
                         </div>
                     </div>
