PProfiles launch. WIP.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -53,7 +53,7 @@
             </p>
         </button>
 
-        <div class="announcementBanner noImage launchingQuiz">
+        <div class="announcementBanner fullWidth pprofilesBeta">
             <div class="bannerLeft">
                 <div class="bannerImage">
                 </div>
@@ -63,30 +63,16 @@
                     <div class="titles">
 
                         <div class="mainTitle">
-                            <span class="avoidwrap">Our new Quiz module</span>
-                            <span class="avoidwrap">&ndash;<span class="standOut"> Primal’s 3D Anatomy Quiz</span>&nbsp;&ndash;</span>
-                            <span class="avoidwrap">has <span class="semibold">launched</span><span class="smallSpace">&nbsp;</span>!</span>
-                            <span class="avoidwrap">If you have access you’ll</span>
-                            <span class="avoidwrap">find it in the
-                                <span class="button-text for-TitlesPage" 
-                                    data-id="Quizzing"
-                                    data-bannerproductlink="true"
-                                    onclick="parent.welcomerLinkClicked(this)">Quizzing</span>
-                                    <span class="button-text for-LoginPage">Quizzing </span>tab.
-                            </span>
-
+                            <span class="avoidwrap"><span class="standOut">Personal Profiles are here!</span>
                         </div>
 
+                        <div class="surOrSubTitle spaced">
+                            Click on <a href="#">this link</a> to get early access and set up<br>your profile before the
+                            full launch in January!
+                        </div>
                         <div class="surOrSubTitle small spaced">
-                            <span class="avoidwrap">
-                                We have also made some changes to&nbsp;Anatomy.tv. 
-                            </span>
-                            <span class="avoidwrap">
-                            More details can be found in this
-                            <!-- You can find out more in this -->
-                            <a href="/faq" title="Link to FAQ page" target="_blank">
-                                <span>FAQ</span></a>.
-                            </span>
+                            More information on our new Personal Profiles <span class="avoidWrap">can be found <a
+                                    href="#">here</a></span>
                         </div>
                     </div>
                 </div>
