PProfiles survey banner. WIP.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -64,9 +64,9 @@
 
                         <div class="mainTitle">
                             <div>
-                                <span class="avoidwrap">Anatomy.tv has been </span>
-                                <span class="avoidwrap"><span class="standOut">optimized</span></span>
-                                <span class="avoidwrap">for <span class="standOut">mobile phones</span><span class="smallSpace">&nbsp;</span>!</span>
+                                <span class="avoidwrap"><span class="standOut">Welcome</span> to Primal’s Early Access
+                                </span>
+                                <span class="avoidwrap">for <span class="standOut">Personal Profiles</span>!</span>
                             </div>
                         </div>
 
@@ -74,8 +74,9 @@
 
                         <div class="surOrSubTitle small">
                             <div>
-                                <span class="avoidwrap">Access on your device's</span>
-                                <span class="avoidwrap">browser today.</span>
+                                <span class="avoidwrap">We’d love to hear what you think of </span>
+                                <span class="avoidwrap">these new developments – click <a href="#">here</a></span>
+                                <span class="avoidwrap">to complete a short survey.</span>
                             </div>
                         </div>
                     </div>
