--- a/banner-for-pl.html
+++ b/banner-for-pl.html
@@ -45,31 +45,29 @@
             <div class="titles">
 
                 <div class="mainTitle">
-                    <span class="avoidwrap">Anatomy.tv has been </span>
-                    <span class="avoidwrap"><span class="standOut">optimized</span></span>
-                    <span class="avoidwrap">for <span class="standOut">mobile phones</span>
-                        <span class="smallSpace">&nbsp;</span>!</span>
+                    <span class="avoidwrap">Welcome to</span>
+                    <span class="avoidwrap"></span>Primal’s Early Access </span>
+                    <span class="avoidwrap">for Personal Profiles!</span>
                 </div>
 
                 <div class="surOrSubTitle small">
-                    <span class="avoidwrap">Access on your device's</span>
-                    <span class="avoidwrap">browser today.</span>
+                    <span class="avoidwrap">We’d love to hear what you think </span>
+                    <span class="avoidwrap">of these new developments – </span><br>
+                    click <a href="#">here</a> to complete a short survey.</span>
                 </div>
             </div>
         </div>
-        <div class="bannerImage">
-        </div>
+        <a href="#">
+            <div class="bannerImage"></div>
+        </a>
         <button class="gotIt-button" onclick="showHideBanner(this)">
-            <p class="for-Desktop">
-                Got it
+            <p>
+                No thanks
             </p>
         </button>
         <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
-            <p class="for-LoginPage">
-                Continue to login
-            </p>
-            <p class="for-TitlesPage">
-                Continue to site
+            <p>
+                Maybe later
             </p>
         </button>
     </div>
