PProfiles beta. WIP.

--- a/banner-for-iframe.html
+++ b/banner-for-iframe.html
@@ -67,8 +67,9 @@
                         </div>
 
                         <div class="surOrSubTitle spaced">
-                            Click on <a href="https://beta.anatomy.tv">this link</a> to get early access and set
-                            up<br>your profile before the full launch in January!
+                            Click on <a href="#" onclick="showPopup('popup-iframe-for-pprofiles')">this link</a> to get
+                            early
+                            access and set up<br>your profile before the full launch in January!
                         </div>
                         <div class="surOrSubTitle small spaced">
                             More information on our new Personal Profiles <span class="avoidWrap">can be found <a
