--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -15,16 +15,16 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner-pl.css?2020-11-17-0931">
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2021-12-13-01">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup.js?2020-11-16"></script>
+    <script src="js/banner-and-popup-pp.js?2021-12-13-01"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
         WebFont.load({
-            custom: {
+            custom: {   
                 families: ['Muli']
             }
         });
@@ -53,7 +53,8 @@
                 <div class="surOrSubTitle small">
                     <span class="avoidwrap">We’d love to hear what you think </span>
                     <span class="avoidwrap">of these new developments – </span><br>
-                    click <a href="#">here</a> to complete a short survey.</span>
+                    click <a href="https://informa.co1.qualtrics.com/jfe/form/SV_00uR3Q8rgwoZl6S"
+                        target="_blank">here</a> to complete a short survey.</span>
                 </div>
             </div>
         </div>
