--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -15,11 +15,11 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner-pp.css?2021-12-13-01">
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2022-01-26-01">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup-pp.js?2021-12-13-01"></script>
+    <script src="js/banner-and-popup-pp.js?2022-01-26-01"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
@@ -46,26 +46,27 @@
 
                 <div class="mainTitle">
                     <span class="avoidwrap">Welcome to</span>
-                    <span class="avoidwrap"></span>Primal’s Early Access </span>
+                    <span class="avoidwrap"></span>Primal's Early Access </span>
                     <span class="avoidwrap">for Personal Profiles!</span>
                 </div>
 
                 <div class="surOrSubTitle small">
-                    <span class="avoidwrap">We’d love to hear what you think </span>
+                    <span class="avoidwrap">We'd love to hear what you think </span>
                     <span class="avoidwrap">of these new developments – </span><br>
-                    click <a href="https://informa.co1.qualtrics.com/jfe/form/SV_00uR3Q8rgwoZl6S"
-                        target="_blank">here</a> to complete a short survey.</span>
+                    complete <a href="https://informa.co1.qualtrics.com/jfe/form/SV_00uR3Q8rgwoZl6S"
+                        target="_blank">this short survey</a> for a second chance to win a Primal swag package including
+                    a free Anatomy Quiz App download!</span>
                 </div>
             </div>
         </div>
         <a href="#">
             <div class="bannerImage"></div>
         </a>
-        <button class="gotIt-button" onclick="showHideBanner(this)">
+        <!-- <button class="gotIt-button" onclick="showHideBanner(this)">
             <p>
                 No thanks
             </p>
-        </button>
+        </button> -->
         <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
             <p>
                 Maybe later
