--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="styles/css/banner-pp.css?2022-01-26-01">
 
-    <script src="scripts/jquery-1.8.3.min.js"></script>
+    <script src="scripts/jquery-1.8.3.min.js?2022-01-26-01"></script>
     <script src="scripts/jquery.cookie.js"></script>
     <script src="js/banner-and-popup-pp.js?2022-01-26-01"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
@@ -53,8 +53,8 @@
                 <div class="surOrSubTitle small">
                     <span class="avoidwrap">We'd love to hear what you think </span>
                     <span class="avoidwrap">of these new developments – </span><br>
-                    complete <a href="https://informa.co1.qualtrics.com/jfe/form/SV_00uR3Q8rgwoZl6S"
-                        target="_blank">this short survey</a> for a second chance to win a Primal swag package including
+                    complete <a href="#" class="survey" onclick="showHideBanner(this);">this short survey</a> for a
+                    second chance to <span class="standOut">win</span> a Primal swag package including
                     a free Anatomy Quiz App download!</span>
                 </div>
             </div>
@@ -62,14 +62,14 @@
         <a href="#">
             <div class="bannerImage"></div>
         </a>
-        <!-- <button class="gotIt-button" onclick="showHideBanner(this)">
-            <p>
-                No thanks
-            </p>
-        </button> -->
         <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
             <p>
                 Maybe later
+            </p>
+        </button>
+        <button class="survey" onclick="showHideBanner(this)">
+            <p>
+                Take survey
             </p>
         </button>
     </div>
