--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -15,11 +15,11 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner-pp.css?2022-01-26-01">
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2022-01-26-03">
 
-    <script src="scripts/jquery-1.8.3.min.js?2022-01-26-01"></script>
+    <script src="scripts/jquery-1.8.3.min.js?2022-01-26-03"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup-pp.js?2022-01-26-01"></script>
+    <script src="js/banner-and-popup-pp.js?2022-01-26-03"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
@@ -52,10 +52,10 @@
 
                 <div class="surOrSubTitle small">
                     <span class="avoidwrap">We'd love to hear what you think </span>
-                    <span class="avoidwrap">of these new developments – </span><br>
-                    complete <a href="#" class="survey" onclick="showHideBanner(this);">this short survey</a> for a
-                    second chance to <span class="standOut">win</span> a Primal swag package including
-                    a free Anatomy Quiz App download!</span>
+                    <span class="avoidwrap">of these new developments – </span>
+                    please complete <a href="#" class="survey" onclick="showHideBanner(this);">this short survey</a> for
+                    a second chance to <span class="standOut">win</span> a Primal swag package or a $50 Amazon gift
+                    card!</span>
                 </div>
             </div>
         </div>
