--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -45,23 +45,20 @@
             <div class="titles">
 
                 <div class="mainTitle">
-                    <span class="avoidwrap">Welcome to</span>
-                    <span class="avoidwrap"></span>Primal's Early Access </span>
-                    <span class="avoidwrap">for Personal Profiles!</span>
+                    Personal Profiles have launched!
                 </div>
 
                 <div class="surOrSubTitle small">
-                    <span class="avoidwrap">We'd love to hear what you think </span>
-                    <span class="avoidwrap">of these new developments – </span>
-                    please complete <a href="#" class="survey" onclick="showHideBanner(this);">this short survey</a> for
-                    a second chance to <span class="standOut">win</span> a Primal swag package or a $50 Amazon gift
-                    card!</span>
+                    <span class="avoidwrap">Find more information
+                        <a href="https://www.primalpictures.com/news/personal-profiles/" target="_blank">here</a></span>
+                    <span class="avoidwrap">or if you have any questions,</span>
+                    <span class="avoidwrap">please get in
+                        touch with us <a href="https://www.primalpictures.com/news/personal-profiles/"
+                            target="_blank">here</a>.</span>
                 </div>
             </div>
         </div>
-        <a href="#">
-            <div class="bannerImage"></div>
-        </a>
+        <div class="bannerImage"></div>
         <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
             <p>
                 Maybe later
