--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -15,11 +15,11 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner-pp.css?2022-01-26-03">
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2022-02-09-01">
 
-    <script src="scripts/jquery-1.8.3.min.js?2022-01-26-03"></script>
+    <script src="scripts/jquery-1.8.3.min.js?2022-02-09-01"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup-pp.js?2022-01-26-03"></script>
+    <script src="js/banner-and-popup-pp.js?2022-02-09-01"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
@@ -61,12 +61,12 @@
         <div class="bannerImage"></div>
         <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
             <p>
-                Maybe later
+                Hide
             </p>
         </button>
-        <button class="survey" onclick="showHideBanner(this)">
+        <button class="gotIt-button" onclick="showHideBanner(this)">
             <p>
-                Take survey
+                Don't show again
             </p>
         </button>
     </div>
