Adjusted image for mobile. Final.

--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -53,12 +53,13 @@
                         <a href="https://www.primalpictures.com/news/personal-profiles/" target="_blank">here</a></span>
                     <span class="avoidwrap">or if you have any questions,</span>
                     <span class="avoidwrap">please get in
-                        touch with us <a href="https://www.primalpictures.com/news/personal-profiles/"
-                            target="_blank">here</a>.</span>
+                        touch with us <a href="https://www.primalpictures.com/contact/" target="_blank">here</a>.</span>
                 </div>
             </div>
         </div>
-        <div class="bannerImage"></div>
+        <div class="bannerImage">
+            <img src="images/personal_profiles_launch2.png" />
+        </div>
         <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
             <p>
                 Hide
