Download from static

--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -15,11 +15,11 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner-pp.css?2022-02-09-01">
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2022-04-29-02">
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup-pp.js?2022-03-30-01"></script>
+    <script src="js/banner-and-popup-pp.js?2022-09-30-01"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
@@ -45,21 +45,35 @@
             <div class="titles">
 
                 <div class="mainTitle">
-                    Personal Profiles have launched!
+                    Visualize biomechanics in&nbsp;action
                 </div>
 
+                <div class="surOrSubTitle">
+                    The new <strong>Real-time Functional Anatomy</strong> is now available for early&nbsp;access!
+                </div>
+                <div class="surOrSubTitle">
+                    Manipulate anatomy, structure-by-structure, to master the complexity of
+                    human&nbsp;motion.
+                </div>
+
+
                 <div class="surOrSubTitle small">
-                    <span class="avoidwrap">Find more information
-                        <a href="https://www.primalpictures.com/news/personal-profiles/" target="_blank">here</a></span>
-                    <span class="avoidwrap">or if you have any questions,</span>
-                    <span class="avoidwrap">please get in
-                        touch with us <a href="https://www.primalpictures.com/contact/" target="_blank">here</a>.</span>
+                    <span class="avoidwrap">
+                        <a href="https://www.primalpictures.com/news/real-time-functional-anatomy-launch/?utm_source=atv&utm_medium=banner&utm_campaign=rtfa"
+                            target="_blank">Learn more </a>
+                        or
+                        <a href="https://www.primalpictures.com/contact/?utm_source=atv&utm_medium=banner&utm_campaign=rtfa"
+                            target="_blank">
+                            try it now
+                        </a>
+                    </span>
                 </div>
             </div>
+            <div class="bannerImage">
+                <img src="images/rtfa_hand4.png" />
+            </div>
         </div>
-        <div class="bannerImage">
-            <img src="images/personal_profiles_launch2.png" />
-        </div>
+
         <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
             <p>
                 Hide
