Upadted time, amended image.

--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -17,11 +17,11 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner-pp.css?2023-02-01-06" />
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2023-02-02-04" />
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup-pp.js?2023-02-01-06"></script>
+    <script src="js/banner-and-popup-pp.js?2023-02-02-04"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
@@ -48,8 +48,8 @@
           <div class="mainTitle">
             On Thursday 9th February
             <span class="avoidwrap"
-              >Anatomy.tv will be down from 9am UK time for approximately
-              1&nbsp;hour</span
+              >Anatomy.tv will be down from <em>8am</em> UK time for
+              approximately 1&nbsp;hour</span
             >
             <span class="avoidwrap"
               >as we work on bringing an exciting new product and
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="bannerImage">
-        <img src="images/maintenance_lom2.jpg" />
+        <img src="images/maintenance_lom3.jpg" />
       </div>
       <button
         class="showHide"
