--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -17,11 +17,11 @@
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner-pp.css?2023-02-02-04" />
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2023-02-06-02" />
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup-pp.js?2023-02-02-04"></script>
+    <script src="js/banner-and-popup-pp.js?2023-02-06-02"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
@@ -48,19 +48,18 @@
           <div class="mainTitle">
             On Thursday 9th February
             <span class="avoidwrap"
-              >Anatomy.tv will be down from <em>8am</em> UK time for
-              approximately 1&nbsp;hour</span
-            >
-            <span class="avoidwrap"
-              >as we work on bringing an exciting new product and
-              enhancements.</span
+              >Anatomy.tv will be undergoing an exciting new product update from
+              <em>8am</em> GMT</span
+            ><span class="avoidwrap">
+              for approximately <em>2&nbsp;hours</em>, and you may experience
+              some interruptions. </span
             >
           </div>
 
           <div class="surOrSubTitle small">
             <span class="avoidwrap"
               >We apologize in advance for any inconvenience caused. If you
-              still can't access Anatomy.tv after this time or have any
+              experience problems with Anatomy.tv after 10am GMT, or have any
               questions, please get in touch
               <a href="https://www.primalpictures.com/contact/" target="_blank"
                 >here</a
