--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -14,31 +14,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- <link rel="preload" href="/fonts/muli/muli-light.ttf" as="font" type="font/ttf" crossorigin>
-    <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
-    <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
+            <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
+            <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-    <link rel="stylesheet" href="styles/css/banner-pp.css?2023-02-06-03" />
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2023-02-22-03" />
 
     <script src="scripts/jquery-1.8.3.min.js"></script>
     <script src="scripts/jquery.cookie.js"></script>
-    <script src="js/banner-and-popup-pp.js?2023-02-06-03"></script>
+    <script src="js/banner-and-popup-pp.js?2023-02-22-03"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
     <!-- <script>
-        WebFont.load({
-            custom: {   
-                families: ['Muli']
-            }
-        });
-        WebFontConfig = {
-            loading: function () {},
-            active: function () {alert('FONTS LOADED')},
-            inactive: function () {},
-            fontloading: function (familyName, fvd) {},
-            fontactive: function (familyName, fvd) {},
-            fontinactive: function (familyName, fvd) {}
-        };
-    </script> -->
+                WebFont.load({
+                    custom: {   
+                        families: ['Muli']
+                    }
+                });
+                WebFontConfig = {
+                    loading: function () {},
+                    active: function () {alert('FONTS LOADED')},
+                    inactive: function () {},
+                    fontloading: function (familyName, fvd) {},
+                    fontactive: function (familyName, fvd) {},
+                    fontinactive: function (familyName, fvd) {}
+                };
+            </script> -->
   </head>
 
   <body class="banner shown">
@@ -51,8 +51,8 @@
 
           <div class="surOrSubTitle">
             Primal's
-            <strong>Anatomy Learning Outcomes for&nbsp;Medicine</strong> is now
-            available!
+            <strong>Anatomy Learning Outcomes for&nbsp;Medicine</strong>
+            is now available!
           </div>
           <div class="surOrSubTitle smaller">
             50+ expert presenters and 150+ videos &ndash; reduce content
