--- a/banner-for-pp.html
+++ b/banner-for-pp.html
@@ -2,27 +2,27 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>ATV banner</title>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>ATV banner</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- <link rel="preload" href="/fonts/muli/muli-light.ttf" as="font" type="font/ttf" crossorigin>
+    <!-- <link rel="preload" href="/fonts/muli/muli-light.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/fonts/muli/muli-semibold.ttf" as="font" type="font/ttf" crossorigin> -->
 
-  <link rel="stylesheet" href="styles/css/banner-pp.css?2023-05-17-01" />
+    <link rel="stylesheet" href="styles/css/banner-pp.css?2023-11-22-02" />
 
-  <script src="scripts/jquery-1.8.3.min.js"></script>
-  <script src="scripts/jquery.cookie.js"></script>
-  <script src="js/banner-and-popup-pp.js?2023-05-17-01"></script>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
+    <script src="scripts/jquery-1.8.3.min.js"></script>
+    <script src="scripts/jquery.cookie.js"></script>
+    <script src="js/banner-and-popup-pp.js?2023-11-22-02"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script> -->
 
-  <!-- <script>
+    <!-- <script>
         WebFont.load({
             custom: {   
                 families: ['Muli']
@@ -40,40 +40,37 @@
 </head>
 
 <body class="banner shown">
-  <div class="announcementBanner">
-    <div class="titlesAndButtons">
-      <div class="titles">
-        <div class="mainTitle">
-          <span class="avoidwrap">
-            Anatomy.tv is currently undergoing some essential maintenance
-          </span>
-          <span class="avoidwrap">
-            and you may experience some interruptions. 
-          </span>
-        </div>
+    <div class="announcementBanner">
+        <div class="titlesAndButtons">
+            <div class="titles">
+                <div class="mainTitle">
+                    <span class="avoidwrap">
+                        On Tuesday 28th November Anatomy.TV is likely to experience some disruption from 07:30 GMT for
+                        approximately 1 hour as we work on some technical&nbsp;updates.
+                    </span>
+                </div>
 
-        <div class="surOrSubTitle small">
-          <span class="avoidwrap">
-            We apologize for any inconvenience caused. If you are experiencing persistent problems with Anatomy.tv, or
-            have any questions, please get in touch&nbsp;<a
-              href="https://www.primalpictures.com/contact/?utm_source=other&utm_medium=website&utm_campaign=2023-May-COMM-GBL-MLO-phase2&utm_content=banner"
-              target="_blank">here</a>.
-          </span>
+                <div class="surOrSubTitle small">
+                    <span class="avoidwrap">
+                        We apologise in advance for any inconvenience caused. If you still can’t access Anatomy.TV after
+                        08:30 GMT on 28th November or have any questions, please get in touch&nbsp;<a
+                            href="https://www.primalpictures.com/contact" target="_blank">here</a>.
+                    </span>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="bannerImage">
+            <img src="images/maintenance_lom3.jpg" />
+        </div>
+        <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
+            <p>Hide</p>
+        </button>
+        <button class="gotIt-button" onclick="showHideBanner(this)">
+            <p>Don't show again</p>
+        </button>
     </div>
-    <div class="bannerImage">
-      <img src="images/maintenance_lom3.jpg" />
-    </div>
-    <button class="showHide" title="Hide announcement banner" onclick="showHideBanner(this);">
-      <p>Hide</p>
-    </button>
-    <button class="gotIt-button" onclick="showHideBanner(this)">
-      <p>Don't show again</p>
-    </button>
-  </div>
-  <div class="dotContainer displayIsNone"></div>
-  <div class="playPause displayIsNone" title="Play / Pause banner"></div>
+    <div class="dotContainer displayIsNone"></div>
+    <div class="playPause displayIsNone" title="Play / Pause banner"></div>
 </body>
 
 </html>
